--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+
+*,
+*::after,
+*::before{
+    font-family: 'Poppins', sans-serif;
+}
+
+@import './assets/scss/utilities/variables';
+@import './assets/scss/utilities/mixin';
+@import './assets/scss/pages/form';
+
