signup view created

--- a/src/assets/scss/pages/_form.scss
+++ b/src/assets/scss/pages/_form.scss
@@ -16,5 +16,9 @@
                 box-shadow: 0 0 0.2rem transparent;
             }
         }
+        .col{
+            @include content-center;
+            margin-bottom: 2rem;
+        }
     }
 }
