signup form updated

--- a/src/app/shared/component/account/signup/signup.component.html
+++ b/src/app/shared/component/account/signup/signup.component.html
@@ -41,6 +41,7 @@
                         </select>
                     </div>
                     <div class="col userRole">
+                        <span class="text-capitalize mr-2">branch:</span>
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="radio" name="role" id="hod" value="HOD" formControlName="role">
                             <label class="form-check-label" for="hod">HOD</label>
