--- a/src/assets/scss/pages/_form.scss
+++ b/src/assets/scss/pages/_form.scss
@@ -20,5 +20,8 @@
             @include content-center;
             margin-bottom: 2rem;
         }
+        .userRole{
+            font-size: 1.1rem;
+        }
     }
 }
