login code update

--- a/src/app/shared/component/account/login/login.component.html
+++ b/src/app/shared/component/account/login/login.component.html
@@ -7,7 +7,7 @@
                 </ng-container>
                 <div class="form-group">
                     <label for="email"></label>
-                    <input type="email" class="form-control i-control" id="email" aria-describedby="emailHelp" placeholder="Enter email"  name="email"  required #email>
+                    <input type="email" class="form-control i-control" id="email" aria-describedby="emailHelp" placeholder="Enter email"  name="email"  required ngModel>
                     <!-- <small id="emailHelp" class="form-text text-danger text-capitalize" *ngIf="email.value">please enter the email</small> -->
                 </div>
                 <div class="form-group">
