navbar view created

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<app-login></app-login>
-<<<<<<< HEAD
+<!-- <app-login></app-login> -->
 <!-- <app-sign-up></app-sign-up> -->
-=======
-<app-sign-up></app-sign-up>
->>>>>>> 903fca8726475ac326071d5e3929ab45dd0cec22
+<!-- <app-sign-up></app-sign-up> -->
+
+<div class="container-fluid">
+    <app-navbar></app-navbar>
+</div>
