--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -2,4 +2,7 @@
     <div class="col-md-3 p-0">
         <app-profile></app-profile>
     </div>
+    <div class="col-md-9">
+        <app-leave-card></app-leave-card>
+    </div>
 </div>
