leave card update

--- a/src/app/shared/component/profile/profile.component.scss
+++ b/src/app/shared/component/profile/profile.component.scss
@@ -1,9 +1,11 @@
 @import '../../../../assets/scss/utilities/mixin';
 .card{
+    border: 0;
     .card-body{
         @include content-center;
         flex-direction: column;
         padding: 2rem;
+        height: 92vh;
         .profile-heading{
             margin-bottom: 1.5rem;
         }
