--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -3,6 +3,7 @@
         <app-profile></app-profile>
     </div>
     <div class="col-md-9">
-        <app-leave-card></app-leave-card>
+        <!-- <app-leave-card></app-leave-card> -->
+        <app-leave-application></app-leave-application>
     </div>
 </div>
