--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -10,10 +10,10 @@
                     <li class="nav-item active">
                         <a class="nav-link">Dashboard</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#"></a>
-                    </li>
                     <li class="nav-item">
+                        <a class="nav-link">Requests</a>
+                    </li>
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="#">Disabled</a>
                     </li> -->
                 </ul>
