dashboard view created

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
-<!-- <app-login></app-login> -->
-<!-- <app-sign-up></app-sign-up> -->
-<!-- <app-sign-up></app-sign-up> -->
 
-<div class="container-fluid">
+
+<!-- <div class="container-fluid">
     <app-navbar></app-navbar>
-    <app-dashboard></app-dashboard>
-</div>
+    <router-outlet></router-outlet>
+</div> -->
+<app-request></app-request>
