--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -11,14 +11,36 @@
                         <a class="nav-link" routerLink="/dashboard">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link">Requests</a>
+                        <a class="nav-link" routerLink="/requests">Requests</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#">Disabled</a>
-                    </li> -->
+                    <li class="nav-item dropdown history-dropdown" (click)="isShowHistoryDrop = !isShowHistoryDrop" [ngClass]="{'show': isShowHistoryDrop}">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="isShowHistoryDrop">
+                          History
+                        </a>
+                        <div class="dropdown-menu history-menu p-0" aria-labelledby="navbarDropdown" [ngClass]="{'show': isShowHistoryDrop}">
+                          <a class="dropdown-item text-capitalize" href="#">pending requests</a>
+                          <a class="dropdown-item text-capitalize" href="#">approved requests</a>
+                          <a class="dropdown-item text-capitalize" href="#">rejected requests</a>
+                        </div>
+                      </li>
                 </ul>
             </div>
-            <button type="submit" class="btn btn-warning text-uppercase" routerLink="/login">login</button>
+            <button type="submit" class="btn btn-warning text-uppercase d-none" routerLink="/login">
+                login
+            </button>
+            <ul class="navbar-nav user-drop">
+                <li class="nav-item dropdown user-drop-down" (click)="isUserDropDown = !isUserDropDown" [ngClass]="{'show' : isUserDropDown}">
+                    <a class="nav-link dropdown-toggle p-0" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="isUserDropDown">
+                      <fa-icon [icon]="faUserCircle"></fa-icon>
+                    </a>
+                    <div class="dropdown-menu user-drop-down-menu" aria-labelledby="navbarDropdown" [ngClass]="{'show' : isUserDropDown}">
+                      <a class="dropdown-item">Action</a>
+                      <a class="dropdown-item">Another action</a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item">Something else here</a>
+                    </div>
+                </li>
+            </ul>
         </nav>
     </div>
 </div>
