--- a/src/app/shared/component/account/login/login.component.html
+++ b/src/app/shared/component/account/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12 p-0">
         <div class="accountForm">
             <form class="userForm" #loginForm="ngForm" (ngSubmit)="onLoginSubmit(loginForm)">
                 <ng-container *ngFor="let message of loginError">
